Fetch list of games

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,8 @@
     "jsx": "react-jsx",
     "paths": {
       "@components/*": ["./src/components/*"],
-      "@assets/*": ["./src/assets/*"]
+      "@assets/*": ["./src/assets/*"],
+      "@services/*": ["./src/services/*"]
     }
   },
   "include": ["src"],
