--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
+    "react-query": "^3.39.3",
     "vite-tsconfig-paths": "^4.0.8"
   },
   "devDependencies": {
